--- a/tracking_list.html
+++ b/tracking_list.html
@@ -65,6 +65,15 @@
             font-size: 20px;
             margin-right: 10px;
         }
+
+        body {
+            overflow-y: scroll;
+        }
+
+        /*#scroll_content {
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch;
+        }*/
     </style>
 
 </head>
@@ -74,7 +83,7 @@
         <img src="images/loader.gif" />
     </div>
 
-    <main class="main-container" style="padding-bottom: 10px;">
+    <main class="main-container">
         <section class="p-2 p-md-3 p-lg-5">
             <div class="container">
                 <div class="row no-gutters justify-content-center">
@@ -92,7 +101,7 @@
                                 </button>
                             </div>
 
-                            <div class="col-12 col-lg-12">
+                            <div id="scroll_content" class="col-12 col-lg-12">
                                 <ul id="tracking_list" style="list-style-type: none; margin-left: 0%;"></ul>
 
                                 <p id="list_loading">
@@ -117,123 +126,142 @@
             <span class="nav__text">Drivers</span>
         </a>
     </nav>
+</body>
 
-    <script>
-        // TODO : Hardcoded franchise id to be replaced by the franchise id passed through ninjacart app
-        let franchise_id = 'FOY0320';
+<script>
+    // TODO : Hardcoded franchise id to be replaced by the franchise id passed through ninjacart app
+    let franchise_id = 'FOY0320';
 
-        $(document).ready(function () {
-            var offset = 0;
-            var search_value = ""
+    var offset = 0;
+    var search_value = ""
 
+    $(document).ready(function () {
+        callGetAllTrackingEntries(franchise_id, offset, search_value)
+        var win = $(window);
+
+        // Each time the user scrolls
+        /*win.scroll(function (e) {
+            // End of the document reached?
+            if ($(document).height() - win.height() == win.scrollTop()) {
+                e.preventDefault();
+
+                offset = offset + 5
+                callGetAllTrackingEntries(franchise_id, offset, search_value)
+            }
+        });*/
+
+        /*window.addEventListener('scroll', (e) => {
+            if (window.scrollY + window.innerHeight >= document.body.offsetHeight - 1000) {
+                e.preventDefault();
+
+                offset = offset + 5
+                callGetAllTrackingEntries(franchise_id, offset, search_value)
+            }
+        });*/
+
+        /*window.onscroll = function (ev) {
+            if ((window.innerHeight + window.scrollY) >= document.body.scrollHeight) {
+                offset = offset + 5
+                callGetAllTrackingEntries(franchise_id, offset, search_value)
+            }
+        }*/
+
+        let scrollY = window.scrollY;
+        let innerHeight = window.innerHeight;
+        let offsetHeight = document.body.offsetHeight;
+
+        if (scrollY + innerHeight > offsetHeight - 100) {
+            offset = offset + 5
             callGetAllTrackingEntries(franchise_id, offset, search_value)
-            var win = $(window);
+        }
+    });
 
-            // Each time the user scrolls
-            win.scroll(function (e) {
-                // End of the document reached?
-                if ($(document).height() - win.height() == win.scrollTop()) {
-                    e.preventDefault();
+    $('#button_search_driver').on('click', function (e) {
+        e.preventDefault();
 
-                    offset = offset + 5
-                    callGetAllTrackingEntries(franchise_id, offset, search_value)
+        let search_value = $('#input_search_driver').val()
+
+        if (search_value == null || search_value == "") {
+            $('#tracking_list').empty()
+            offset = 0;
+            search_value = ""
+            callGetAllTrackingEntries(franchise_id, offset, search_value)
+        } else {
+            $('#tracking_list').empty()
+            offset = 0;
+            callGetAllTrackingEntries(franchise_id, offset, search_value)
+        }
+    });
+
+    function callGetAllTrackingEntries(received_franchise_id, received_offset, received_search_value) {
+        console.log(`received : ${received_offset}`)
+        $.ajax({
+            type: "POST",
+            url: BASE_URL + GET_ALL_TRACKING_ENTRIES,
+            data: JSON.stringify({
+                "franchise_id": received_franchise_id,
+                "offset": received_offset,
+                "search_value": received_search_value,
+                "limit": 5
+            }, function (k, v) { return v === undefined ? null : v; }),
+            contentType: 'application/json; charset=utf-8',
+            dataType: 'json',
+            beforeSend: function () {
+                $('#list_loading').show();
+            },
+            success: function (response) {
+                $('#list_loading').hide();
+
+                if (response != null && response['code'] == '000') {
+                    var response_rows = response['rows'];
+
+                    if (response_rows.length > 0) {
+                        for (index in response_rows) {
+                            let start_location_name = response_rows[index]['start_location_name']
+                            start_location_name = start_location_name.split(',')[0];
+
+                            let end_location_name = response_rows[index]['end_location_name']
+                            end_location_name = end_location_name.split(',')[0];
+
+                            let location_name = start_location_name + '&emsp; <i class="fa fa-arrow-circle-right" style="color:green"></i> &emsp;' + end_location_name
+
+                            let driver_details = response_rows[index]['name'] + " | " + response_rows[index]['mobile_number']
+
+                            createCard(location_name, driver_details, response_rows[index]['mobile_number'])
+                        }
+                    }
+                } else {
+
                 }
-            });
+            },
+            error: function (response) {
+                $('#list_loading').hide();
 
-            /*window.addEventListener('scroll', (e) => {
-                if (window.scrollY + window.innerHeight >= document.body.offsetHeight - 1000) {
-                    e.preventDefault();
-
-                    offset = offset + 5
-                    callGetAllTrackingEntries(franchise_id, offset, search_value)
+                if (response['message'] != null && response['message'] != "") {
+                    alert(response['message'])
+                } else {
+                    alert(ERROR_GETTING_TRACKING_LIST)
                 }
-            });*/
-        });
-
-        $('#button_search_driver').on('click', function (e) {
-            e.preventDefault();
-
-            let search_value = $('#input_search_driver').val()
-
-            if (search_value == null || search_value == "") {
-                $('#tracking_list').empty()
-                callGetAllTrackingEntries(franchise_id, 0, search_value)
-            } else {
-                $('#tracking_list').empty()
-                callGetAllTrackingEntries(franchise_id, 0, search_value)
             }
         });
+    }
 
-        function callGetAllTrackingEntries(received_franchise_id, received_offset, received_search_value) {
-            console.log(`received : ${received_offset}`)
-            $.ajax({
-                type: "POST",
-                url: BASE_URL + GET_ALL_TRACKING_ENTRIES,
-                data: JSON.stringify({
-                    "franchise_id": received_franchise_id,
-                    "offset": received_offset,
-                    "search_value": received_search_value,
-                    "limit": 5
-                }, function (k, v) { return v === undefined ? null : v; }),
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                beforeSend: function () {
-                    $('#list_loading').show();
-                },
-                success: function (response) {
-                    $('#list_loading').hide();
+    function createCard(location_name, driver_details, mobile_number) {
+        const divCard = document.createElement('div');
+        divCard.className = 'card'
+        divCard.style = 'margin : 10px;'
+        divCard.innerHTML = `<div class="card-body">
+            <h6 class="card-title">${location_name}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">${driver_details}</h6>
+            <a href="tracking_details.html?mobile_number=${mobile_number}" class="card-link">Track <i class="fa fa-location-arrow" style="color:#007BFF"></i></a>
+        </div>`
 
-                    if (response != null && response['code'] == '000') {
-                        var response_rows = response['rows'];
-                        
-                        if (response_rows.length > 0) {
-                            for (index in response_rows) {
-                                let start_location_name = response_rows[index]['start_location_name']
-                                start_location_name = start_location_name.split(',')[0];
+        $('#tracking_list').append(divCard);
+    }
 
-                                let end_location_name = response_rows[index]['end_location_name']
-                                end_location_name = end_location_name.split(',')[0];
-
-                                let location_name = start_location_name + '&emsp; <i class="fa fa-arrow-circle-right" style="color:green"></i> &emsp;' + end_location_name
-
-                                let driver_details = response_rows[index]['name'] + " | " + response_rows[index]['mobile_number']
-
-                                createCard(location_name, driver_details, response_rows[index]['mobile_number'])
-                            }
-                        }
-                    } else {
-
-                    }
-                },
-                error: function (response) {
-                    $('#list_loading').hide();
-
-                    if (response['message'] != null && response['message'] != "") {
-                        alert(response['message'])
-                    } else {
-                        alert(ERROR_GETTING_TRACKING_LIST)
-                    }
-                }
-            });
-        }
-
-        function createCard(location_name, driver_details, mobile_number) {
-            const divCard = document.createElement('div');
-            divCard.className = 'card'
-            divCard.style = 'margin : 10px;'
-            divCard.innerHTML = `<div class="card-body">
-                <h6 class="card-title">${location_name}</h6>
-                <h6 class="card-subtitle mb-2 text-muted">${driver_details}</h6>
-                <a href="tracking_details.html?mobile_number=${mobile_number}" class="card-link">Track <i class="fa fa-location-arrow" style="color:#007BFF"></i></a>
-            </div>`
-
-            $('#tracking_list').append(divCard);
-        }
-
-        function reroute(mobile_number) {
-            window.location.href = `tracking-details.html?mobile_number=${mobile_number}`;
-        }
-    </script>
-</body>
+    function reroute(mobile_number) {
+        window.location.href = `tracking-details.html?mobile_number=${mobile_number}`;
+    }
+</script>
 
 </html>
